# filecrab

./: Cargo.toml  README.md  clippy.toml
configuration/: config.toml
locales/: cs.ftl  en.ftl
src/: authorization.rs  configuration.rs  database.rs  error.rs  lib.rs  localization.rs  main.rs  tracing.rs
src/routes/: create.rs  list.rs  mod.rs
